--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iconapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://crossthefox.github.io/valtiersystem/",
   "dependencies": {
     "@emotion/css": "^11.9.0",
     "@emotion/react": "^11.9.3",
